# miinaharava

./: .gitignore  Cargo.toml  README.md  cobertura.xml  coverage.md  coverage.sh  maaritysdokumentti.md
.github/workflows/: rust.yml
.workflows/: rust.yml
documentation/: implementationdocument.md  projectspecification.md  testingdocument.md  userguide.md
miinaharava/: Cargo.toml
miinaharava/src/: game.rs  lib.rs  main.rs  minefield.rs  minefield_renderer.rs
miinaharava/src/resources/: atlas.xcf
miinaharava/src/tests/: minefield.rs  mod.rs
minesweeper-ai/: Cargo.toml
minesweeper-ai/benches/: ai.rs
minesweeper-ai/src/: ai.rs  csp.rs  lib.rs  main.rs  temp.rs  thread_controller.rs
minesweeper-ai/src/ai/: backtracking.rs  constraint_sets.rs  constraints.rs  coord_set.rs  mod.rs
minesweeper-ai/src/ai/backtracking/: mod.rs  solutions.rs
minesweeper-ai/src/ai/tests/: backtracking.rs  constraint_sets.rs  coord_set.rs  csp.rs  mod.rs
minesweeper-ai/src/ai/tests/backtracking/: mod.rs  solutions.rs
minesweeper-ai/src/tests/: ai.rs  csp.rs  mod.rs
src/: game.rs  main.rs  minefield.rs  renderer.rs  window.rs
weeklyreports/: weeklyraport2.md  weeklyraport4.md  weeklyreport1.md  weeklyreport2.md  weeklyreport3.md  weeklyreport4.md  weeklyreport5.md  weeklyreport6.md
