[package]
name = "minesweeper-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miinaharava = { path = "../miinaharava" }
arrayvec = "0.7.2"
rand = "0.8.5"
argh = "0.1.10"
bitvec = "1.0.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "ai"
harness = false

